force-app/main/default/objects/AVO_Location__c/fields/AVO_24_Coastal__c.field-meta.xml
<CustomField>
    <fullName>AVO_24_Coastal__c</fullName>
    <label>24 Coastal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>