force-app/main/default/objects/AVO_Location__c/fields/AVO_City_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_City_ID__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>City ID</label>
    <type>AutoNumber</type>
</CustomField>