force-app/main/default/objects/AVO_Location__c/fields/AVO_City_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_City_Name__c</fullName>
    <label>City Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>