force-app/main/default/objects/AVO_Location__c/fields/AVO_County__c.field-meta.xml
<CustomField>
    <fullName>AVO_County__c</fullName>
    <label>County #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>