force-app/main/default/objects/AVO_Location__c/fields/AVO_County_Seat__c.field-meta.xml
<CustomField>
    <fullName>AVO_County_Seat__c</fullName>
    <label>County Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>