force-app/main/default/objects/AVO_Location__c/fields/AVO_Extension_District__c.field-meta.xml
<CustomField>
    <fullName>AVO_Extension_District__c</fullName>
    <label>Extension District</label>
    <length>250</length>
    <type>Text</type>
</CustomField>