force-app/main/default/objects/AVO_Location__c/fields/AVO_LatLimitNorth__c.field-meta.xml
<CustomField>
    <fullName>AVO_LatLimitNorth__c</fullName>
    <label>LatLimitNorth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>