force-app/main/default/objects/AVO_Location__c/fields/AVO_LonLimitWest__c.field-meta.xml
<CustomField>
    <fullName>AVO_LonLimitWest__c</fullName>
    <label>LonLimitWest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>