force-app/main/default/objects/AVO_Location__c/fields/AVO_State_Code__c.field-meta.xml
<CustomField>
    <fullName>AVO_State_Code__c</fullName>
    <label>State Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>