force-app/main/default/objects/AVO_Location__c/recordTypes/AVO_City.recordType-meta.xml
<RecordType>
    <fullName>AVO_City</fullName>
    <active>true</active>
    <label>City</label>
</RecordType>